# smartvns-sdk

./: .gitignore  .gitmodules  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: mkdocs.yaml  wheel.yaml
docs/: cli.md  getting-started.md  index.md  installation.md  vnsconnect-routines.md  vnsconnect.md
src/smartvns/: __init__.py
src/smartvns/cli/: __init__.py  __main__.py  _cli.py  fragments.py  routines.py
src/smartvns/config/: __init__.py
src/smartvns/vnsconnect/: __init__.py  _vnsconnect.py  routines.py
src/smartvns_cli/: __init__.py
src/smartvns_cli/ble/: vnsconnect.py  vnsconnect_async.py
src/smartvns_cli/config/: README.md  __init__.py
src/smartvns_cli/usb_ctrl/: __init__.py  __main__.py  cli.py  controller.py  routines.py
