[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartvns"
version = "0.1.0"
description = "SmartVNS CLI tools"
readme = "README.md"
authors = [{name = "Andrea Ronco"}]
dependencies = ["typer", "smpclient", "tqdm", "protobuf"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
smartvns-cli = "smartvns.cli._cli:app"
